--- a/layouts/goody/styles.css
+++ b/layouts/goody/styles.css
@@ -10,6 +10,7 @@
     justify-content: center;
     width: 100vw;
     background-color: var(--home-bottom);
+    z-index: 100;
 }
 
 .goody-header-sub-container {
